@@ -119,6 +119,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
         <dependency>
@@ -232,6 +236,10 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-dev</artifactId>
+		</dependency>
 
 		<!-- Test Dependencies -->
 		<dependency>
@@ -304,7 +312,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<mainClass>com.app.ModulithApplication</mainClass>
-					<jvmArguments>-Duser.timezone=Asia/Kolkata -XX:+UseZGC -XX:+ZGenerational -Xmx2g -Xms512m --add-modules jdk.incubator.vector -XX:+UseCompactObjectHeaders --enable-preview</jvmArguments>
+					<jvmArguments>-Duser.timezone=Asia/Kolkata -XX:+UseZGC -Xmx2g -Xms512m --add-modules jdk.incubator.vector -XX:+UseCompactObjectHeaders --enable-preview</jvmArguments>
 				</configuration>
 			</plugin>
 		</plugins>
